--- a/doc/A-M_APDL_reference.org
+++ b/doc/A-M_APDL_reference.org
@@ -1,16 +1,16 @@
-#+DATE: Time-stamp: <2020-02-23>
+#+DATE: Time-stamp: <2021-08-30>
 #+bind: org-html-preamble-format (("en" "%d"))
-#+TITLE:  APDL-Mode Highlighting and APDL Reference
+# #+TITLE:  APDL-Mode Highlighting and APDL Reference
 # #####################################################################
 #+AUTHOR:    H. Dieter Wilhelm
 #+EMAIL:     dieter@duenenhof-wilhelm.de
 # #+DATE:      2012-06-17 Sa
-#+DESCRIPTION:
+#+DESCRIPTION: Version 20.6.0
 #+KEYWORDS:
 #+LANGUAGE:  en
 #+OPTIONS:   email:t H:5 num:t toc:2 \n:nil @:t ::t |:t ^:nil -:t f:t *:t <:t
 #+OPTIONS:   TeX:t LaTeX:t skip:nil d:nil todo:t pri:nil tags:not-in-toc
-#+INFOJS_OPT: view:nil toc:t ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
+#+INFOJS_OPT: view:nil toc:t ltoc:t mouse:underline buttons:0 path:https://orgmode.org/org-info.js
 #+EXPORT_SELECT_TAGS: export
 #+EXPORT_EXCLUDE_TAGS: noexport
 #+XSLT:
@@ -19,7 +19,7 @@
 # #+LaTeX_CLASS: koma-article
 # #+LATEX: \tableofcontents
 #+LATEX_HEADER: \usepackage{scrpage2}
-#+LATEX_HEADER: \titlehead{\includegraphics[width=15cm]{ansys+emacs.png}}
+#+LATEX_HEADER: \titlehead{\includegraphics[width=15cm]{ansys+emacs2020.png}}
 #+LATEX_HEADER: \subject{APDL-Mode}
 #+LATEX_HEADER: \subtitle{APDL and Syntax Highlighting}
 #+LATEX_HEADER:\areaset{15cm}{25cm} %textarea on page
@@ -35,14 +35,14 @@
 #+HTML_HEAD_EXTRA:
 #+HTML_MATHJAX:
 #+INFOJS_OPT:
-#+CREATOR: <a href="http://www.gnu.org/software/emacs/">Emacs</a> 24.5.1 (<a href="http://orgmode.org">Org</a> mode 8.2.10)
+# #+CREATOR: <a href="https://www.gnu.org/software/emacs/">Emacs</a> 24.5.1 (<a href="https://orgmode.org">Org</a> mode 8.2.10)
 #+LATEX_HEADER:
-#+HTML_LINK_HOME: https://github.com/dieter-wilhelm/ansys-mode
+#+HTML_LINK_HOME: https://github.com/dieter-wilhelm/apdl-mode
 #+HTML_LINK_UP: ../index.html
 
 
 #+TEXT: This is still a work in progress, good documentation is hard work!
-#+TEXT: Please report the faults.
+#+TEXT: Please report faults, thank you.
 
 * WorkBench to APDL Translation
 ** Contacts
@@ -50,7 +50,7 @@
       :PROPERTIES:
       :Version:  17.0
       :END:
-    #+BEGIN_SRC ansys
+    #+BEGIN_SRC apdl
      2333        6        5        6        0     6458     6457     6422     6421     8356     8306     8303     8304
 -1
 keyo,cid,8,2               ! auto create asymmetric contact (from Program Controlled setting)
@@ -90,13 +90,13 @@ eblock,10,,,94
     #+END_SRC
 ** Material Models
 *** Plasticity
-**** Multilinear Kinematic Hardening (MISO)
-     Implementation:
-     #+BEGIN_SRC ansys
-     TB,PLAS,1,1,2,MISO
-     #+END_SRC
-     This means that one must input the curve in plastic strains and
-     *not* engineering strains!
+    Multilinear Kinematic Hardening (MISO)
+    Implementation:
+    #+BEGIN_SRC apdl
+    TB,PLAS,1,1,2,MISO
+    #+END_SRC
+    This means that one must input the curve in plastic strains and
+    true stresses, *not* in the engineering quantities!
 ** Boundary conditions
 **** forces
      it is possible to apply time and spatially varying loads either
@@ -124,7 +124,7 @@ eblock,10,,,94
 
 **** Pressure
      Surface elements ~surf154~ and surface loads on elements (~sfe~)
-      #+BEGIN_SRC ansys
+      #+BEGIN_SRC apdl
        /com,*********** Define Pressure Vector Using Surface Effect Elements ***********
        local,12,0,0.,0.,0.,0.,0.,0.
        csys,0
@@ -198,7 +198,7 @@ eblock,10,,,94
       :END:
       Fixing normal displacement with (~d~), possibly modifying nodal
       coordinate system (~nmodif~), turning into normal direction.
-      #+BEGIN_SRC ansys
+      #+BEGIN_SRC apdl
         /com,********* Frictionless Supports X *********
         CMBLOCK,_FRICSUX,NODE,       48
         (8i10)
@@ -219,39 +219,44 @@ eblock,10,,,94
 * APDL Reference
 ** Idiosyncrasies
   - You can only store character variables of 8 characters, strings of
-    32 characters and for *only* 248 characters you need to create a
-    string array!
-  - No function definitions <- write `command' files (suffix: .mac),
-    or call a macro (arbitrary suffix) with `*use', something close is
-    to fill a "table" arry, interpolating values and possible real
-    indexing A(0.3).
+    32 characters and for a maximum of 248 characters you need to
+    create a string array!
+  - No proper function definitions <- write `command' files (suffix:
+    .mac), or call a macro (arbitrary suffix) with `*use', something
+    close is to fill a "table" arry, interpolating values and possible
+    real indexing A(0.3).
   - you can get table array values with real index values but must use
     integers for assigning them the values, the same goes for *vplot:
     it needs the arry indices in integers and is, moreover, only
     capable to plot the columns and not their line values!
-  - *vplot does only plot the columns of arrys, it is not possible to
+  - *vplot does only plot the columns of arrays, it is not possible to
     specify rows
   - No direct array values to file export in GUI mode <- write command
     file for *vwrite, or use a (lookup) table for this purpose
   - *vwread does not work with C format specifiers in contrast to *vwrite
   - Still (v15) no *round* function in sight, but someting like
-    nint(max*1e3)/1e3 might do
-  - One cannot easily get the variable value, either one must assign
+    nint(max*1e3)/1e3 might do for you
+  - One cannot directly get the variable value, either one must assign
     the variable to another one, or use the `*stat' command
   - Operators > and <: 1 < 2 = 1; 2 < 1 = 1; 2 > 1 = 2 :TODO check
   - Inconsistent naming: /{x,y}range but /axlab,{x,y},
+  - Inconsistent comma usage: /com and c*** are working with and
+    without a subsequent comma (/com without a comma is eating one
+    character)
   - The /contour command does not work on device /show,PNG
-  - DELETION OF ARRY parameters without warning only possible with an
-    undocumented option: *del,Array,,nopr
-  - *cfwrite does parameter substituion without %%: *cfwrite, X_points
+  - Deletion of arry parameters without warning is only possible with
+    an undocumented option: *del,Array,,nopr
+  - *cfwrite does parameter substitution without %%: *cfwrite, X_points
     = NoN,*cfwrite, the same as X_points = %NoN%????
-  - No direct operation on arrays like A=A*3, take a detour with
+  - No direct operations on arrays, like A=A*3, takes a detour with
     *voper or *toper
   - Load symbol vectors /pbc,all,,1 in /prep7 are uniform in
     contrast to the more ralistic ones in /solu
   - You can send only a complete block structure to the solver
 
-** File types (the whole zoo is in the operations guide) under Gnu/Linux?
+** File types
+   the whole zoo is documented in the operations guide
+
    |  No | Type                                                             | Name     | temp. | Remark                             | Format  |
    |-----+------------------------------------------------------------------+----------+-------+------------------------------------+---------|
    |   1 | abort                                                            | .abt     |       |                                    | binary  |
@@ -297,7 +302,7 @@ eblock,10,,,94
    |  41 | Fatigue data [FTWRITE]                                           | .fatg    | no    |                                    | ascii   |
    |  42 | neutral graphics file                                            | .grph    | no    |                                    | ascii   |
    |  43 | Graphical solution tracking file                                 | .gst     | no    |                                    | binary  |
-   |  44 | IGES file from ANSYS solid model data [IGESOUT]                  | .iges    | no    |                                    | ascii   |
+   |  44 | IGES file from Ansys solid model data [IGESOUT]                  | .iges    | no    |                                    | ascii   |
    |  45 | initial state                                                    | .ist     |       |                                    |         |
    |  46 | Loading and bc of load steps (used for multiframe restart)       | .ldhi    |       |                                    | ascii   |
    |  47 | Database command log file [LGWRITE]                              | .lgw     | no    |                                    | ascii   |
@@ -354,14 +359,14 @@ eblock,10,,,94
    |  98 | Superelement load vector data from generation pass               | .seld    |       |                                    |         |
    |  99 | scratch file for supernode solver                                | .snode#  | yes   |                                    | binary  |
    | 100 | Superelement name and number from use pass                       | .sort    |       |                                    |         |
-   | 101 | Status of an ANSYS batch run                                     | .stat    | no    |                                    | ascii   |
+   | 101 | Status of an Ansys batch run                                     | .stat    | no    |                                    | ascii   |
    | 102 | scratch file for substructure generation pass                    | .sscr    | yes   |                                    | binary  |
    | 103 | substructure matrices                                            | .sub     |       |                                    |         |
    | 104 | Hyperelastic material constants                                  | .tb      | no    |                                    | ascii   |
    | 105 | Renamed DSUB File for input to substructure expansion pass       | .usub    | no    |                                    | binary  |
-   | 106 | FLOTRAN boundary condition data (ANSYS to FLOTRAN)               | .xbc     | no    |                                    | ascii   |
-   | 107 | FLOTRAN geometry data (ANSYS to FLOTRAN)                         | .xgm     | no    |                                    | ascii   |
-   | 108 | FLOTRAN initial condition data (ANSYS to FLOTRAN)                | .xic     | no    |                                    | ascii   |
+   | 106 | FLOTRAN boundary condition data (Ansys to FLOTRAN)               | .xbc     | no    |                                    | ascii   |
+   | 107 | FLOTRAN geometry data (Ansys to FLOTRAN)                         | .xgm     | no    |                                    | ascii   |
+   | 108 | FLOTRAN initial condition data (Ansys to FLOTRAN)                | .xic     | no    |                                    | ascii   |
    | 109 | restart                                                          | .x#      |       |                                    |         |
    |-----+------------------------------------------------------------------+----------+-------+------------------------------------+---------|
    | 110 | Old (10/11) WorkBench database                                   | .wbdb    | no    |                                    | binary  |
@@ -383,9 +388,9 @@ eblock,10,,,94
    - .mac
    - .db
    - .dbb
-   
 
-#+begin_src ansys :exports none
+
+#+begin_src apdl :exports none
   c***,**************************************************
   !@ --- APDL Reference ---
   c******************************************************
@@ -393,80 +398,80 @@ eblock,10,,,94
   !! APDL peculiarities, which are not documented!
 #+end_src
 ** Defining parameters
-up to 5000
-*** Double, char38, char8?, logical? TODO:
+   up to 5000
+*** Double, char38, char8, logical, TODO
     in table only 8 chars?
-    
-*** Variable names (called `parameter' in the ANSYS manual)
-All numeric values are stored as double precision values.  Not defined
-variables are assigned a tiny value near zero.  The interpreter is not case sensitve
-:TODO except in strings?
-**** Must begin with a letter or an underscore
-#+begin_src ansys :exports none
+
+*** Variable names
+    Called `parameter' in the Ansys manual.  All numeric values are
+    stored as double precision values.  Not defined variables are
+    assigned a tiny value near zero.  The interpreter is not case
+    sensitive :TODO except in strings?
+    - Parameters must begin with a letter or an underscore
+#+begin_src apdl :exports none
   !@ --- Defining parameters ---
   !@@ -- Variable names --
-  
+
   !! Must begin with a letter or an underscore The interpreter is not
   !! case sensitive for expressions only for strings
 #+end_src
-#+begin_src ansys
+#+begin_src apdl
   1ansys = 3                    !is not a valid variable name
   a1nsys = 3                    !a1nsys is a valid variable name
   A1NSys = 4                    !this is the same variable
-  A1NSys = Temp                 !`Temp' is not defined
+  A1NSys = Temp                 !`Temp' is not defined, near zero
 #+end_src
-    The following text is the respective ANSYS solver/interpreter output.
-#+begin_src ansys-solver :tangle no
+    The following text is the respective Ansys solver/interpreter output.
+#+begin_src apdl-solver :tangle no
   BEGIN:
    1ansys = 3                    !is not a valid variable name
-  PARAMETER 1ANSYS =     3.000000000    
+  PARAMETER 1Ansys =     3.000000000
   *** ERROR ***                           CP =       0.259   TIME= 18:06:41
-  Invalid character in parameter name.                                    
-   The setting of parameter= 1ANSYS is ignored.                           
+  Invalid character in parameter name.
+   The setting of parameter= 1Ansys is ignored.
   BEGIN:
    a1nsys = 3                    !a1nsys is a valid variable name
-  PARAMETER A1NSYS =     3.000000000    
+  PARAMETER A1NSYS =     3.000000000
   BEGIN:
    A1NSys = 4                    !this is the same variable
-  PARAMETER A1NSYS =     4.000000000    
+  PARAMETER A1NSYS =     4.000000000
   BEGIN:
    A1NSys = Temp                 !`Temp' is not defined
   *** WARNING ***                         CP =       0.260   TIME= 18:06:56
-  Unknown parameter name= TEMP.  A value of 7.888609052E-31 will be used. 
+  Unknown parameter name= TEMP.  A value of 7.888609052E-31 will be used.
   PARAMETER A1NSYS =    0.7888609052E-30
   BEGIN:
 #+end_src
-**** Should not begin with an underscore
-    This convention is used in nameing variables in ANSYS supplied
-    macros and the GUI.
+    Should not begin with an underscore This convention is used in
+    nameing variables in Ansys supplied macros and the GUI.
 
-#+begin_src ansys :exports none
+#+begin_src apdl :exports none
    !! Should not begin with an underscore
 #+end_src
-    
-#+begin_src ansys
-  _ansys = 3   !`_ansys' represents a reserved variable in ANSYS supplied macros
+
+#+begin_src apdl
+  _ansys = 3   !`_ansys' represents a reserved variable in Ansys supplied macros
   _ = 3        ! a single underscore definition is valid
   X = _
   _ = 3 !the single underscore represents  also a `variable' in APDL
 #+end_src
-**** Variable names with a trailing underscore
+- Variable names with a trailing underscore
     These are hidden from the `*status' command output and can be
     deleted as a group with `*del'.
-#+begin_src ansys :exports none
+#+begin_src apdl :exports none
   !! Variable names with a trailing underscore
 #+end_src
 
-#+begin_src ansys
+#+begin_src apdl
   ansys_ = 3              !this is a `hidden' variable from *status
   *status                 !does not show `ansys_'
          ,PRM_            !show variables with trailing underscore
   *del,,PRM_              !delete all variables with trailing underscore
 #+end_src
-#+begin_src ansys-solver :tangle no
+#+begin_src apdl-solver :tangle no
      BEGIN:
     ansys_ = 3
-     PARAMETER ANSYS_ =     3.000000000    
+     PARAMETER Ansys_ =     3.000000000
      BEGIN:
      *status
      ABBREVIATION STATUS-
@@ -475,57 +480,57 @@ variables are assigned a tiny value near zero.  The interpreter is not case sens
       RESUM_DB  RESUME
       QUIT      Fnc_/EXIT
       POWRGRPH  Fnc_/GRAPHICS
-    
+
      PARAMETER STATUS-           (      5 PARAMETERS DEFINED)
                       (INCLUDING        4 INTERNAL PARAMETERS)
-    
+
      NAME                              VALUE                        TYPE  DIMENSIONS
      X                                 3.00000000                    SCALAR
      BEGIN:
     ,PRM_
      PARAMETER STATUS- PRM_      (      5 PARAMETERS DEFINED)
                       (INCLUDING        4 INTERNAL PARAMETERS)
-    
+
      NAME                              VALUE                        TYPE  DIMENSIONS
-     ANSYS_                            3.00000000                    SCALAR
+     Ansys_                            3.00000000                    SCALAR
      BEGIN:
 #+end_src
-**** Must contain only letters, numbers and underscores
-#+begin_src ansys :exports none
+- Must contain only letters, numbers and underscores
+#+begin_src apdl :exports none
   !! Must contain only letters, numbers and underscores
 #+end_src
-#+begin_src ansys
+#+begin_src apdl
   !! only letters, numbers and underscores are allowed
   a1n§sys = 3              !this is not a valid variable name
   a1n_sys = 3              !this is a valid variable name
 #+end_src
-the ANSYS interpreter output looks like this:
-#+begin_src ansys-solver :tangle no
+the Ansys interpreter output looks like this:
+#+begin_src apdl-solver :tangle no
   BEGIN:
    a1n§sys = 3              !this is not a valid variable name
   ,*** ERROR ***                           CP =       0.256   TIME= 17:35:07
-  Invalid character in parameter name.                                    
-   The setting of parameter= A1N§SYS is ignored.                         
+  Invalid character in parameter name.
+   The setting of parameter= A1N§SYS is ignored.
   BEGIN:
    a1n_sys = 3              !this is a valid variable name
-  PARAMETER A1N_SYS =     3.000000000    
+  PARAMETER A1N_SYS =     3.000000000
   BEGIN:
 #+end_src
-**** Must contain no more than 32 characters    
-#+begin_src ansys :exports none
-  !! Must contain no more than 32 characters    
+- Must contain no more than 32 characters
+#+begin_src apdl :exports none
+  !! Must contain no more than 32 characters
 #+end_src
-#+begin_src ansys
+#+begin_src apdl
   !! The following is not a valid variable name
   v23456789_123456789_123456789_123 = 3
   !! The following is a valid variable name
   v23456789_123456789_123456789_12  = 3
 #+end_src
-**** Local Variables
-#+begin_src ansys :exports none
+- Local Variables
+#+begin_src apdl :exports none
   !! Local Variables
 #+end_src
-#+begin_src ansys
+#+begin_src apdl
   Depth  =  ARG1 !ARG{1-9}, AR{10-19} = "*use" variables
   AR18 = AR19
   *stat,argx
@@ -533,20 +538,20 @@ the ANSYS interpreter output looks like this:
 
 *** Character strings
     Must not contain more than 32 characters
-#+begin_src ansys :exports none
+#+begin_src apdl :exports none
   !@@ -- Character strings --
   !! Must not contain more than 32 characters
 #+end_src
-#+begin_src ansys
+#+begin_src apdl
   ! character string variables are enclosed with `''
   Yc = '012345678901234567901234567890123' !not a character variable any more
   Symetry = 'yes'
 #+end_src
 ** Erasing variables from memory
-#+begin_src ansys :exports none
+#+begin_src apdl :exports none
   !@@ -- Erasing variables from memory --
 #+end_src
-#+begin_src ansys
+#+begin_src apdl
   !! defining
   Scalar = 3               !the `=' assignment is a shorthand for `*set'
   *set,Scalar,4            !reassignment
@@ -558,20 +563,21 @@ the ANSYS interpreter output looks like this:
   *set,Scalar               !alternative to `Scalar ='
   *del,all                 !delete all variables!
   *del,Vector   !TODO:
-#+end_src    
+#+end_src
 
-** Variable substitution with `%'
-#+begin_src ansys :exports none
+** Variable substitution
+   with `%'
+#+begin_src apdl :exports none
   !@@ -- Variable substitution with `%' --
 #+end_src
 *** Substitution of Numeric Variables
 In "string commands" like `/com', where a string follows the command
 name one can force the substitution of a parameter name to its value.
 Other examples are
-#+begin_src ansys :exports none
+#+begin_src apdl :exports none
   !! Substitution of Numeric Variables
 #+end_src
-#+begin_src ansys
+#+begin_src apdl
   Steel = 1
   /com,Material %Steel% is steel
   !! ATTENTION: in the following situation!
@@ -581,35 +587,35 @@ Other examples are
 #+end_src
 *** Substitution of Character Variables
 It is possible to substitute a command name
-#+begin_src ansys :exports none
+#+begin_src apdl :exports none
    !! Substitution of Character Variables
 #+end_src
-#+begin_src ansys
+#+begin_src apdl
   R='RESUME'
   %R%,MODEL,DB
 #+end_src
-#+begin_src ansys
+#+begin_src apdl
   !! string, message commands and comment behaviour && %$$% %% :bla: &&&
-  
+
   /com, bla = %bla%
   igesin,'test','%iges%'
   /title,Nothing in %particular%
   !! in "string commands" are no code comments possible
   /com,beam3 %YES% ! this is *really not commented out!!!! &
   c*** *beam3 !otto *otto %neither% here !!!!!!! &
-  /com, bearm laskf %otto% !%otto% we are here 
-  
+  /com, bearm laskf %otto% !%otto% we are here
+
 #+end_src
-**** In certain `string commands'
-~/title~ and ~/com~ are string commands similar to ~c***~ 
-#+begin_src ansys
+- In certain `string commands'
+~/title~ and ~/com~ are string commands similar to ~c***~
+#+begin_src apdl
   right = 'wrong'
   /title, the value of right is  %right%
   /com, this is %right%: /com does expand parameters as well
 #+end_src
-**** Unfortunately here is no expansion possible
+- Unfortunately here is no expansion possible
 neither with ~c***~ nor with ~/sys~
-#+begin_src ansys
+#+begin_src apdl
   right = 9
   c***,this is %right%: c*** allows no parameter expansion
   /sys,ls "*.mac" %otto% &
@@ -618,72 +624,75 @@ neither with ~c***~ nor with ~/sys~
   otto = 'file00%I%.eps'
   /syp,ls, otto !this is working as intended
 #+end_src
-   
+
 *** Dynamic Substitution of Numeric or Character Variables
  or forced substitution (deferred)
-#+begin_src ansys :exports none
+#+begin_src apdl :exports none
   !! Dynamic Substitution of Numeric or Character Variables
 #+end_src
 
-#+begin_src ansys
+#+begin_src apdl
   Case = 'case 1'
-  /title,This is  %Case%
-                           !/stitle
-                           !*ask
-                           !/tlabel
-                           !/an3d
-                           !in tables TODO:
+  /title,This is %Case%
+  !! /stitle
+  !! *ask
+  !! /tlabel
+  !! /an3d
+  !! in tables TODO:
   aplot
   Case = 'case 2'
   !! not necessary to reissue /title, "This is case 2"
   !! will appear on subsequent plots
   aplot
-#+end_src    
+#+end_src
 
 ** Expressions
-*** Exponentiation Operator is `**'
-#+begin_src ansys :exports none
+*** Exponentiation Operator
+    is `**'
+#+begin_src apdl :exports none
    !! Exponentiation Operator is `**'
-#+end_src    
+#+end_src
 *** Multiplication Expression
-    Beware of the oldstyle ANSYS comment!
-#+begin_src ansys :exports none
-  !! Beware of the oldstyle ANSYS comment!
-#+end_src    
+    Beware of the oldstyle Ansys asterisk comment!
+#+begin_src apdl :exports none
+  !! Beware of the oldstyle Ansys asterisk comment sign!
+#+end_src
+
 #+begin_src  ansys
+otto = 3 * 4 COMMENT! The value of otto is actually 3!
 var1 = sinh(cos(3 *5)) ! old style Ansys comment!!!!!
 var2 = sinh(cos(3*5))  ! this is valid code
 fini * comment
-otto = 3 * 4 comment, the value of otto = 3!
 !!
 #+end_src
-*** Operators: `<' and  `>' :TODO
-#+begin_src ansys :exports none
+*** Operators
+    `<' and  `>' :TODO
+#+begin_src apdl :exports none
    !! Operators: `<' and  `>' :TODO
-#+end_src    
-#+begin_src ansys
+#+end_src
+#+begin_src apdl
   otto = 1.82
   karl = 1.97
   margret =  otto < karl !margret = otto
   maria = karl < otto    !maria = otto
   *status,karl > otto
-#+end_src    
+#+end_src
 ** Arrays
    4 types: array, char of 8 characters, table and string 128 chars
-#+begin_src ansys :exports none
+#+begin_src apdl :exports none
   !@@ -- Arrays --
-#+end_src   
+#+end_src
 *** Specifiying array element values
-#+begin_src ansys :exports none
+#+begin_src apdl :exports none
    !! Specifiying array element values
 #+end_src
 *** APDL Math
-#+begin_src ansys :exports none
+#+begin_src apdl :exports none
    !! APDL Math
-#+end_src    
+#+end_src
 APDL Math works in its own workspace independent of the APDL
 environment!
-#+begin_src ansys
+#+begin_src apdl
   No = 100
   Pi = acos(-1)
   Dat = cos(0:2*Pi:(2*Pi/No))+ cos(0:2*Pi*10:(2*Pi/No))
@@ -693,63 +702,63 @@ environment!
   *fft,Forw,Dat,OutDat,,,Full !what's the difference?
   *fft,    ,Dat,OutDat,,,Part !what's the difference?
   *export,OutDat,apdl,APDLOutDat
-#+end_src    
+#+end_src
 
 ** debugging
-#+begin_src ansys
+#+begin_src apdl
   debug                    !TODO: undocumented?
 #+end_src
 ** Multiple runs, probabilistic design
-#+begin_src ansys
+#+begin_src apdl
   PDEXE, Slab, MRUN, NFAIL, FOPT, Fname
-  in V11: *mrun                    !TODO: 
-#+end_src   
+  in V11: *mrun                    !TODO:
+#+end_src
 ** Undocumented commands
-#+begin_src ansys
+#+begin_src apdl
   !undocumented commands are highlighted differently
   /xml                     !undocumented command /xml
   /xfrm                    !documented command   /xfrm
 #+end_src
 * APDL-Mode Syntax Highlighting Reference
-#+BEGIN_LaTeX
-  \definecolor{dkgreen}{rgb}{0,0.5,0}
-  \definecolor{dkred}{rgb}{0.5,0,0}
-  \definecolor{gray}{rgb}{0.5,0.5,0.5}
-  \lstset{frame=none, %leftline
-    basicstyle=\ttfamily\bfseries\footnotesize,
-    morekeywords={virtualinvoke},
-    keywordstyle=\color{dkgreen},
-    ndkeywordstyle=\color{red},
-    commentstyle=\color{dkred},
-    stringstyle=\color{orange},
-%   numbers=left,
-%    numberstyle=\ttfamily\tiny\color{gray},
-%    stepnumber=1,
-%    numbersep=10pt,
-    backgroundcolor=\color{white},
-    tabsize=4,
- %   showspaces=false,
-%    showstringspaces=false,
-    xleftmargin=.23in
-  }
+# #+BEGIN_LaTeX :exports none
+#   \definecolor{dkgreen}{rgb}{0,0.5,0}
+#   \definecolor{dkred}{rgb}{0.5,0,0}
+#   \definecolor{gray}{rgb}{0.5,0.5,0.5}
+#   \lstset{frame=none, %leftline
+#     basicstyle=\ttfamily\bfseries\footnotesize,
+#     morekeywords={virtualinvoke},
+#     keywordstyle=\color{dkgreen},
+#     ndkeywordstyle=\color{red},
+#     commentstyle=\color{dkred},
+#     stringstyle=\color{orange},
+# %   numbers=left,
+# %    numberstyle=\ttfamily\tiny\color{gray},
+# %    stepnumber=1,
+# %    numbersep=10pt,
+#     backgroundcolor=\color{white},
+#     tabsize=4,
+#  %   showspaces=false,
+# %    showstringspaces=false,
+#     xleftmargin=.23in
+#   }
 
-\lstdefinelanguage{ansys}
-  {
-  morecomment=[l]{!},
-  morecomment=[l]{\ *}, % olds style comments
-  morestring=[b]',
-  sensitive=false,
-  morekeywords={nsel,et,mp,block,d,vmesh,allsel,save,solve,plnsol,finish,
-     aplot,eplot,igesin,set,lfillt},
-  otherkeywords={*MSG,*if,*do,*enddo,*dowhile,*create,*end,*endif,/title,/com,
-    /units,/prep7,/solu,/post1,/post26,/eof,/image,/sys,*afun,/view,c***,*get,
-   *msg,/xfr,*vwrite,*go,*dim,*stat,/annot,/plopt,/triad,/erase,/tspe,/win,
-   /tlab,/erase,/annot,/pspe,/pwed,/poly,*vscfun,/tlab},
-}
-#+END_LaTeX  
-   
+# \lstdefinelanguage{ansys}
+#   {
+#   morecomment=[l]{!},
+#   morecomment=[l]{\ *}, % olds style comments
+#   morestring=[b]',
+#   sensitive=false,
+#   morekeywords={nsel,et,mp,block,d,vmesh,allsel,save,solve,plnsol,finish,
+#      aplot,eplot,igesin,set,lfillt},
+#   otherkeywords={*MSG,*if,*do,*enddo,*dowhile,*create,*end,*endif,/title,/com,
+#     /units,/prep7,/solu,/post1,/post26,/eof,/image,/sys,*afun,/view,c***,*get,
+#    *msg,/xfr,*vwrite,*go,*dim,*stat,/annot,/plopt,/triad,/erase,/tspe,/win,
+#    /tlab,/erase,/annot,/pspe,/pwed,/poly,*vscfun,/tlab},
+# }
+# #+END_LaTeX
+
 ** Header
-#+begin_src ansys
+#+begin_src apdl
     !! ------------------------------
     !@ --- header ---
     !! ------------------------------
@@ -760,7 +769,7 @@ environment!
     !!  Please see further below.
 #+end_src
 
-#+begin_src ansys
+#+begin_src apdl
   /units,mpa !indicate mm-t-s unit system
   !@ --- Preprocessing ---
   /prep7
@@ -797,7 +806,7 @@ environment!
   *fft                     !TODO: :-)
 #+end_src
 
-#+begin_src ansys
+#+begin_src apdl
   !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
   !!  Please put the the cursor below the next paragraph of emacs lisp
   !!  code and type "C-x C-e" to change the setting of
@@ -820,7 +829,7 @@ environment!
 #+end_src
 
 # and this is for the APDL file
-#+begin_src ansys :exports none
+#+begin_src apdl :exports none
 ! this is the lisp code
   (progn
     (when
@@ -837,7 +846,7 @@ environment!
 !! ------------------------------
 /units,mpa !indicate mm-t-s unit system
 c
-#+begin_src ansys
+#+begin_src apdl
   !@@ -- Ignored characters and condensed input line ($ operator)
   finishThisNightmare $ /cle !/clear
   f $ fi $ fin $ fini $ finis  $ finish $ finisher
@@ -848,26 +857,26 @@ c
 !@ --- APDL-Mode is highlighting APDL specials ---
 #+end_src
 *** Reserved words and _RETURN statements
-#+begin_src ansys :exports none
+#+begin_src apdl :exports none
 !@@ -- Reserved words and _RETURN statements --
 #+end_src
-#+begin_src ansys
+#+begin_src apdl
   !!
   N      =  _RETURN       !return value of certain commands
   Alpha2 =  +360./(2*N)
   Xc     =  !empty rhs clears variables
 #+end_src
 *** _RETURN values of macros
-#+begin_src ansys
+#+begin_src apdl
   *return                  !TODO: what is this?
   *status,_RETURN          !0 normal
                            !1 note
                            !2 warning
                            !3 error
                            !4 fatal
-#+end_src    
+#+end_src
 ***  Old style APDL comments
-#+begin_src ansys :exports none
+#+begin_src apdl :exports none
 !@@ -- Old style APDL comments --
 #+end_src
 #+begin_src  ansys
@@ -878,7 +887,7 @@ otto = 3 * 4 comment, the value of otto = 3!
 !!
 #+end_src
 *** Ignored characters behind commands
-#+begin_src ansys :exports none
+#+begin_src apdl :exports none
 !@@ -- Ignored characters behind commands --
 #+end_src
 #+begin_src  ansys
@@ -894,17 +903,17 @@ f $ fi $ fin $ fini $ finis  $ finish $ finisher
 !!
 #+end_src
 
-#+begin_src ansys
+#+begin_src apdl
   !@@ -- function names --
   Pi=acos(-1) $ True=1 $ False=0 $ Nn=3.1
   Alpha1 = rotx( 14.5) - 360./ (2*Nn)
 #+end_src
 
 *** Ignored characters behind commands
-#+begin_src ansys :exports none
+#+begin_src apdl :exports none
 !@@ -- Ignored characters behind commands --
 #+end_src
-#+begin_src ansys
+#+begin_src apdl
   f $ fi $ fin $ fini $ finis  $ finish $ finisher
   a $ al $ all $ alls $ allse $ allsel $ allselllllll
   rectngaaaaa,var1,_X2,var2,X2 ! 2d rectangle
@@ -914,16 +923,17 @@ f $ fi $ fin $ fini $ finis  $ finish $ finisher
 #+begin_src  ansys :exports none
   !@@ -- End Of File command --
 #+end_src
-#+begin_src ansys
+#+begin_src apdl
     /eof --- WARNING: /eof crashes the Ansys GUI in interactive mode ---
+    !! /eof stops input for batch runs and the solver returns error code 8
     /exit,nosave           !default is save the model data
   !!
 #+end_src
 *** Current element types and deprecated elements
-#+begin_src ansys :exports none
+#+begin_src apdl :exports none
   !@@ -- Current element types & deprecated elements
 #+end_src
-#+begin_src ansys
+#+begin_src apdl
   !! A current element type:
   et,10,solid186
   !! deprecated element types:
@@ -931,19 +941,19 @@ f $ fi $ fin $ fini $ finis  $ finish $ finisher
   !!
 #+end_src
 Let's change the element types to current ones!
-#+begin_src ansys :tangle yes
+#+begin_src apdl :tangle yes
   !! Complete the following element fragments to current ones!
   !!
   et,Steel,beam $ et,Alu,shell
 
 #+end_src
 For example select the following elements
-#+begin_src ansys :tangle no
+#+begin_src apdl :tangle no
   et,Steel,beam188 $ et,Alu,shell28
 #+end_src
 and you are getting a diffent element highlighting.
 
-#+begin_src ansys
+#+begin_src apdl
   !@@ -- default commands
   nsel,s,loc,y,0
       ,a,loc,y,1
@@ -951,7 +961,7 @@ and you are getting a diffent element highlighting.
   d,all,all
 #+end_src
 ** Implied (or colon) looping
-#+begin_src ansys
+#+begin_src apdl
   !@@ ::: implicit : (colon) looping :::::
   !! (n1:n2:dn)
   lfillt,(1:2),(3:4),5
@@ -967,7 +977,7 @@ and you are getting a diffent element highlighting.
   *vfill,Fx,ramp,1,10
 #+end_src
 
-#+begin_src ansys
+#+begin_src apdl
   !! looping
   ,*get,Dim
   ,*if,Dim,le,1,then
@@ -980,21 +990,21 @@ and you are getting a diffent element highlighting.
     Reaction(I)=Fx
   ,*enddo
 #+end_src
-#+begin_src ansys
+#+begin_src apdl
   !@@ -- multiline *msg formatting with the & operator
   *MSG,UI,Vcoilrms,THTAv,Icoilrms,THTAi,Papprnt,Pelec,PF,indctnc
   Coil RMS voltage, RMS current, apparent pwr, actual pwr, pwr factor: %/ &
   Steel = %G A (electrical angle = %G DEG) %/ &
   _Power factor: %G %/ &
   Inductance = %G %/ &
-  VALUES ARE FOR ENTIRE COIL (NOT JUST THE MODELED SECTOR) 
+  VALUES ARE FOR ENTIRE COIL (NOT JUST THE MODELED SECTOR)
 #+end_src
 
 * And the rest
 
   *taxis only for 3 dimension? table(0,1) = 3 is working as well
 
-#+begin_src ansys
+#+begin_src apdl
   !@@ --! multiline message format command this is tricky: use M-o M-o
   *MSG,UI,Vcoilrms,THTAv,Icoilrms,THTAi,Papprnt,Pelec,PF,indctnc
   Coil RMS voltage, RMS current, apparent pwr, actual pwr, pwr factor: %/ &
@@ -1004,31 +1014,31 @@ and you are getting a diffent element highlighting.
   VALUES ARE FOR ENTIRE COIL (NOT JUST THE MODELED SECTOR)
   aldk this is not any longer in the *msg format construct
   /com this is not any longer in the *msg format construct
-  
+
   *vwrite,B(1,1),B(2,1),%yes%
   alkd %D &
   %E%/%E
 #+end_src
-#+begin_src ansys
+#+begin_src apdl
   !! commands which do not allow arguments
   /prep7 $ FINISH !$ means nothing behind
   /prep7 !still nothing behind
   /prep7 * old style comment, this is allowed
-  /prep7 this is an error  
+  /prep7 this is an error
 #+end_src
-#+begin_src ansys
+#+begin_src apdl
   nsel,s,loc,x,1
   nsel = 3  !you CAN have variable names clashing with commands
 #+end_src
 
-#+begin_src ansys
+#+begin_src apdl
   !@@ -- Goto branching --
   *go,:branch
   aselsalsdkfjaölsdkfjaölskdjf,all
   :branch
 #+end_src
 
-#+begin_src ansys
+#+begin_src apdl
   !-----------------------------------------------------------------------
   ! mdlbl.mac
   ! Puts Modal Info on Plot
@@ -1038,13 +1048,13 @@ and you are getting a diffent element highlighting.
   *get,nmd,active,,set,sbst
   pfct= $ ffrq= $ adir=
   nsel,s,l
-  
+
   *dim,pfct,,nmd,6
       ,
       ,ffrq,,nmd
       ,adir,char,nmd
-  
-  
+
+
   adir(1) = 'X','Y','Z','ROTX','ROTY','ROTZ'
   *stat,adir
   *do,i,1,nmd
@@ -1066,7 +1076,7 @@ and you are getting a diffent element highlighting.
   /TSPE, 15, 1.000,   1,   0,   0
   xx = 1.05
   yy = .9
-  !  Change the window settings if you need different 
+  !  Change the window settings if you need different
   !  aspect ratios for your geometry
   /win,1,-1,1,.5,1
       ,2,-1,1,0,.5
@@ -1076,7 +1086,7 @@ and you are getting a diffent element highlighting.
   /win,2,off
   /win,3,off
   /win,4,off
-  
+
   *get,vx,graph,1,view,x
   *get,vy,graph,1,view,y
   *get,vz,graph,1,view,z
@@ -1087,9 +1097,9 @@ and you are getting a diffent element highlighting.
     /dist,i,vd
     /angle,i,va
   *enddo
-  
+
   *do,i,1,4
-    ii = i - 1 + iadd 
+    ii = i - 1 + iadd
     set,1,ii
     plnsol,u,sum
     *if,i,eq,1,then
@@ -1117,32 +1127,32 @@ and you are getting a diffent element highlighting.
   sz = .8
   xloc = 0
   yloc = 0
-  
+
   *dim,data,,5
   data(1) = 12,15,28,10,32
   hsz = sz/2
-  
+
   /pspec,0,1,1
   /poly,4,xloc-hsz,yloc-hsz,1.8*(xloc+hsz),yloc-hsz,
            1.8*(xloc+hsz),yloc+hsz,xloc-hsz,yloc+hsz
-  
+
   x0 = xloc + hsz
   y0 = yloc + .7*hsz
   lof = .05
-  
+
   *vscfun,dsum,sum,data(1)
   /LSPE, 15, 0, 1.000
   /TSPEC, 15, 0.700, 1, 0, 0
   ang1 = 0
   *do,i,1,5
-    ang2 = ang1 + (360*data(i)/dsum) 
-    /PSPE, 2*i, 1, 1 
-    /PWED, xloc,yloc,sz*.4, ang1,ang2 
-    /poly,4,x0,y0,x0+lof,y0,x0+lof,y0+lof,x0,y0+lof 
-    pvl = 100*data(i)/dsum 
-    /tlab, x0+1.5*lof,y0, %pvl% % 
-  
-    y0 = y0 - 1.5*lof 
+    ang2 = ang1 + (360*data(i)/dsum)
+    /PSPE, 2*i, 1, 1
+    /PWED, xloc,yloc,sz*.4, ang1,ang2
+    /poly,4,x0,y0,x0+lof,y0,x0+lof,y0+lof,x0,y0+lof
+    pvl = 100*data(i)/dsum
+    /tlab, x0+1.5*lof,y0, %pvl% %
+
+    y0 = y0 - 1.5*lof
     ang1 = ang2
   *enddo
   /eof
