--- a/info/index.org
+++ b/info/index.org
@@ -2,7 +2,7 @@
 #+OPTIONS: author:t c:nil creator:comment d:(not "LOGBOOK") date:t
 #+OPTIONS: e:t email:t f:t inline:t num:t p:nil pri:nil prop:nil
 #+OPTIONS: stat:t tags:t tasks:t tex:t timestamp:t toc:nil todo:t |:t
-#+DATE: Time-stamp: <2021-08-31>
+#+DATE: Time-stamp: <2021-09-09>
 #+TITLE: The Comprehensive APDL-Mode Documentation
 #+AUTHOR: H. Dieter Wilhelm
 #+EMAIL: dieter@duenenhof-wilhelm.de
@@ -53,8 +53,8 @@
 * Tutorials
 ** Introductory
    APDL-Mode introductory tutorial
-  - PDF: [[file:doc/A-M_introductory_tutorial.pdf][A-M_introductory_tutorial.pdf]]
-  - HTML: [[file:doc/A-M_introductory_tutorial.org][Introductory Tutorial]]
+  - PDF: [[file:doc/A-M_introductory_tutorial.pdf][Tutorial]]
+  - HTML: [[file:doc/A-M_introductory_tutorial.org][Tutorial]]
 ** In-depth
   - HTML: [[file:doc/A-M_in-depth_tutorial.org][In-depth Tutorial]]
 * Reference Manuals
